# sysml2py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: black.yml  documentation.yml  release.yml  workflows.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/sysml2py/: Analysis.py  Case.py  Import.py  KerML.tx  KerMLExpressions.tx  SysML.py  SysML.tx  Verification.py  __init__.py  _import.py  action.py  attribute.py  base.py  definition.py  examples.py  formatting.py  item.py  loads.py  member.py  package.py  part.py  sysml2.lark.py  types.py  types.text  usage.py
src/sysml2py/grammar/: KerML.tx  KerMLExpressions.tx  SysML.tx  SysML_compiled.tx  classes.py
src/sysml2py/textx/: kerml.tx  package.tx  types.py  types.text  types.type  xtext_to_textx.py
tests/: __init__.py  aliaspackage.text  class_test.py  conftest.py  functions.py  grammar_test.py  importpackage.text  main_test.py  out_aliaspackage.text  out_importpackage.text  out_multipackage.text  out_ownedpackage.text  out_subpackage.text  ownedpackage.text  subpackage.text
