[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysml2py"
version = "0.1.2"
authors = [
  { name="Christopher Cox", email="chris.cox@westfall.io" },
]
description = "SysML v2.0 Parser"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/sysml2py", "src"]

[tool.setuptools.package-data]
grammar = ["*.tx"]

[project.urls]
"Homepage" = "https://github.com/Westfall-io/sysml2py"
"Bug Tracker" = "https://github.com/Westfall-io/sysml2py/issues"
