[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysml2py"
version = "0.1.2"
authors = [
  { name="Christopher Cox", email="chris.cox@westfall.io" },
]
description = "SysML v2.0 Parser"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/sysml2py", "src"]

[tool.setuptools.package-data]
grammar = ["*.tx"]

[tool.semantic_release]
branch = "dev0.1.3"
version_variable = "pyproject.toml:version"
version_source = "tag"
commit_version_number = true # required for version_source = "tag"
tag_commit = true
commit_parser = "semantic_release.history.emoji_parser"
build_command = false
upload_to_repository = false
upload_to_release = false

[project.urls]
"Homepage" = "https://github.com/Westfall-io/sysml2py"
"Bug Tracker" = "https://github.com/Westfall-io/sysml2py/issues"
